[package]
name = "elapsed"
version = "0.1.2"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
description = "Measure execution time of a block of code"
license = "MIT"
repository = "https://github.com/matklad/elapsed.git"
documentation = "https://docs.rs/crate/elapsed/0.1.2"
readme = "README.md"
